--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-    - tools-26.0.2
-    - platform-tools--26.0.2
+    # - tools
+    # - platform-tools
 
     # The BuildTools version used by your project
     - build-tools-26.0.2
